--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "speech"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.1.1"
+description = "An experimental CLI for live-text-to-speech. Meant for live-coding performances."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
